[package]
name = "dcc-rs"
version = "0.2.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/sciguy16/dcc-rs"
description = "Implementation of NMRA Digital Command Control for driving model trains"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use-defmt = ["defmt"]

[dependencies]
bitvec = { version = "1", default-features = false }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
defmt = { version = "0.3", optional = true }
